// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link List Component does not render when items are empty 1`] = `
<div>
  


</div>
`;

exports[`Link List Component renders with custom attributes and classes 1`] = `
<div>
  

  
  <ul
    class="ct-item-list ct-item-list--horizontal ct-item-list--regular  custom-modifier"
    data-test="true"
  >
    
                  
    <li
      class="ct-item-list__item"
    >
      <a
        href="/"
      >
        Home
      </a>
    </li>
    
                        
    <li
      class="ct-item-list__item"
    >
      <a
        href="/about"
      >
        About
      </a>
    </li>
    
                        
    <li
      class="ct-item-list__item"
    >
      <a
        href="/contact"
      >
        Contact
      </a>
    </li>
    
            
  </ul>
  

</div>
`;

exports[`Link List Component renders with default values 1`] = `
<div>
  

  
  <ul
    class="ct-item-list ct-item-list--horizontal ct-item-list--regular  "
  >
    
                  
    <li
      class="ct-item-list__item"
    >
      <a
        href="/"
      >
        Home
      </a>
    </li>
    
                        
    <li
      class="ct-item-list__item"
    >
      <a
        href="/about"
      >
        About
      </a>
    </li>
    
                        
    <li
      class="ct-item-list__item"
    >
      <a
        href="/contact"
      >
        Contact
      </a>
    </li>
    
            
  </ul>
  

</div>
`;

exports[`Link List Component renders with large size 1`] = `
<div>
  

  
  <ul
    class="ct-item-list ct-item-list--horizontal ct-item-list--large  "
  >
    
                  
    <li
      class="ct-item-list__item"
    >
      <a
        href="/"
      >
        Home
      </a>
    </li>
    
                        
    <li
      class="ct-item-list__item"
    >
      <a
        href="/about"
      >
        About
      </a>
    </li>
    
                        
    <li
      class="ct-item-list__item"
    >
      <a
        href="/contact"
      >
        Contact
      </a>
    </li>
    
            
  </ul>
  

</div>
`;

exports[`Link List Component renders with vertical direction 1`] = `
<div>
  

  
  <ul
    class="ct-item-list ct-item-list--vertical ct-item-list--regular  "
  >
    
                  
    <li
      class="ct-item-list__item"
    >
      <a
        href="/"
      >
        Home
      </a>
    </li>
    
                        
    <li
      class="ct-item-list__item"
    >
      <a
        href="/about"
      >
        About
      </a>
    </li>
    
                        
    <li
      class="ct-item-list__item"
    >
      <a
        href="/contact"
      >
        Contact
      </a>
    </li>
    
            
  </ul>
  

</div>
`;

exports[`Link List Component renders without gaps 1`] = `
<div>
  

  
  <ul
    class="ct-item-list ct-item-list--horizontal ct-item-list--regular ct-item-list--no-gap "
  >
    
                  
    <li
      class="ct-item-list__item"
    >
      <a
        href="/"
      >
        Home
      </a>
    </li>
    
                        
    <li
      class="ct-item-list__item"
    >
      <a
        href="/about"
      >
        About
      </a>
    </li>
    
                        
    <li
      class="ct-item-list__item"
    >
      <a
        href="/contact"
      >
        Contact
      </a>
    </li>
    
            
  </ul>
  

</div>
`;
